# openstack-uwsgi-middleware

./: README.md  requirements.txt  setup.cfg
uwsgi_middleware/: __init__.py  uwsgi.py
