[metadata]
name = uwsgi-middleware
summary = OpenStack middleware enables injection of uwsgi openstack variables
author = SAP
home-page = https://github.com/sapcc/openstack-uwsgi-middleware
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    uwsgi_middleware

[entry_points]
paste.filter_factory =
    uwsgi = uwsgi_middleware:Uwsgi.factory
